--- a/DESAFIOS/d012/estilo/style.css
+++ b/DESAFIOS/d012/estilo/style.css
@@ -1,13 +1,25 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Winky+Rough:ital,wght@0,300..900;1,300..900&display=swap');
+
+:root{
+    --font1: Verdana, Geneva, Tahoma, sans-serif;
+    --font2: "Passion One", sans-serif;
+    --font3: "Winky Rough", sans-serif;
+}
+
 *{
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body{
     background-color: darkgray;
     min-height: 100vh;
+    font-family: var(--font1);
+    
 }
 
 header{
@@ -20,6 +32,8 @@ header{
 header>h1{
     padding-top: 40px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 10vw;
 }
 
 header>p{
@@ -43,6 +57,9 @@ section{
     padding-bottom: 10vh;
     line-height: 35px;
     padding-left: 35px;
+    font-family: var(--font3);
+    font-size: 3.5vw;
+    font-weight: bold;
 }
 
 section.normal{
@@ -57,7 +74,8 @@ section.imagem{
 
 section.imagem > p{
     background-color: rgba(0, 0, 0, 0.541);
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
 
 footer{
