--- a/DESAFIOS/d012/estilo/style.css
+++ b/DESAFIOS/d012/estilo/style.css
@@ -55,10 +55,10 @@ a:hover{
 section{
     padding-top: 10vh;
     padding-bottom: 10vh;
-    line-height: 35px;
+    line-height: 55px;
     padding-left: 35px;
     font-family: var(--font3);
-    font-size: 3.5vw;
+    font-size: 3.2vw;
     font-weight: bold;
 }
 
@@ -68,14 +68,30 @@ section.normal{
 }
 
 section.imagem{
-    background-color: rgba(0, 0, 0, 0.397);
+    background-color: rgba(0, 0, 0, 0.568);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.582);
+    background-attachment: fixed;
 }
 
 section.imagem > p{
-    background-color: rgba(0, 0, 0, 0.541);
+    background-color: rgba(0, 0, 0, 0.705);
     display: inline-block;
     padding: 5px;
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01{
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+
+}
+
+section#img02{
+    background-image: url('../imagens/background002.jpg');
+    background-size: cover;
+
 }
 
 footer{
